# argumentor

./: .cursorignore  .dockerignore  .env_template  .eslintrc.json  .gitignore  Aptfile  Dockerfile  Procfile  README.md  config.py  docker-compose.yml  logfile  package-lock.json  package.json  pyproject.toml  requirements.txt
migrations/versions/: 0208681c3092_add_completed_achievements_column_to_.py  025a4c3b252a_add_achievements.py  0b6bc351f3fe_add_email_field_to_feedback_model.py  2b5aed863200_add_pending_plan_change_field_to_user_.py  2ff9d6d816f0_add_password_reset_option.py  4276ee13eff7_move_achievements_to_constants.py  658d2ce7e681_increase_user_agent_length.py  65909b69ff2f_add_monthly_limits_tracking.py  6ef2eea7ee62_add_preferred_language.py  96a3fc5e3bd3_add_completed_achievement_column_to_.py  a94f63f822ab_initial_migration.py  ebb1cab3bea4_initial_migration.py  f3d4660f348a_track_voice_recordings.py  f4a6b92d6b59_add_stripe_details_to_manage_.py  fb1265041b0e_add_password_reset_option.py  fb85b50c3b2c_add_input_mode.py  fix_timezone_handling.py
scripts/: convert_videos.sh  generate_test_audio.py  load_test.py  profile_memory.py  test_llm.py  test_memory.py  test_transcription.py
src/: app.py  commands.py  errors.py  extensions.py  llm.py  middleware.py  models.py  utils.py
src/constants/: achievements.py  categories.py  levels.py
src/data/: argument_structures.py  biases_fallacies.yaml  cognitive_biases.yaml  evaluation_criteria.yaml  example_answers.py  questions.yaml
src/routes/: answers.py  auth.py  pages.py  password_reset.py  preferences.py  (+2 more)
(+48 files in other folders)
