[project]
name = "argumentor"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
  {name = "Amadeus Magrabi"},
]
description = "A platform to train reasoning skills and make better decisions."
readme = "README.md"
keywords = ["reasoning", "decision-making"]
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "gunicorn",
    "python-dotenv",
    "google-genai",
    "google-cloud-aiplatform",
    "pydantic-settings"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[project.urls]
Repository = "https://github.com/amagrabi/argumentor"

[tool.ruff]
line-length = 88
indent-width = 4
